--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
-    "ec-project-main": "file:..",
     "font-awesome": "4.7.0",
     "overlay-navbar": "^1.2.3",
     "react": "^18.2.0",
@@ -24,7 +23,7 @@
     "react-redux": "^8.1.3",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.8.2",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
@@ -56,7 +55,6 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react": "^7.33.2",
-    "react-app-rewired": "^2.2.1"
+    "eslint-plugin-react": "^7.33.2"
   }
 }
