--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,13 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:4000",
+  "options": {
+    "allowedHosts": [
+      "localhost",
+      ".localhost"
+    ],
+    "proxy": "http://localhost:4000"
+  },
   "dependencies": {
     "@paypal/react-paypal-js": "^8.1.3",
     "@reduxjs/toolkit": "^1.9.7",
@@ -11,6 +17,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "dotenv": "^16.4.5",
+    "ec-project-main": "file:..",
     "font-awesome": "4.7.0",
     "overlay-navbar": "^1.2.3",
     "react": "^18.2.0",
@@ -55,6 +63,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint-plugin-react": "^7.33.2"
   }
 }
