--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "color": "^4.2.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
@@ -33,7 +34,7 @@
   "license": "MIT",
   "devDependencies": {
     "concurrently": "^8.2.2",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "nodemon": "^3.0.1"
   }
 }
